# bdb-26

./: .gitignore  README.md  analytics_plays_animated.ipynb  analytics_pred_catch.ipynb  analytics_pred_catch_analysis.ipynb  analytics_pred_catch_clean.ipynb  baseline.py  catch_prob.ipynb  local_inference.py  nfl-bdb-26-feature-rich-gru-predictor-lb-0-61.ipynb  nfl-big-data-bowl-geometric-gnn-lb-58-in_kaggle.ipynb  nfl-big-data-bowl-geometric-gnn-lb-58-in_local.ipynb  nfl-big-data-bowl-geometric-gnn-lb-586.ipynb  opensourcefootballreference  prediction.ipynb  prediction.py  prediction_cnn.ipynb  prediction_cnn_add_features.ipynb  prediction_cnn_add_temporal.ipynb  prediction_gnn_plus_temporal.ipynb  prediction_w_gnn_final.ipynb  pyproject.toml  spatial_cnn_slice_3e_4_90.ipynb
src/: evaluate.py  kinematics.py  prepData.py
src/analytics/: analytics_readme.md  nfl-big-data-bowl-geometric-gnn-lb-58-in_kaggle.ipynb  nfl-big-data-bowl-geometric-gnn-lb-58-in_local.ipynb  plays_animated.ipynb  pred_catch.ipynb  pred_catch_analysis.ipynb
