[project]
name = "bdb-26"
version = "0.1.0"
description = "Package management for big data bowl 2026"
authors = [
    {name = "kevniu95",email = "kniu@uchicago.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "grpcio (>=1.76.0,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "protobuf (>=6.33.1,<7.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
